@@ -15,6 +15,22 @@ class TestTime < Test::Unit::TestCase
     $VERBOSE = @verbose
   end
 
+  def test_to_s_default_encoding
+    before = Encoding.default_internal
+    Encoding.default_internal = nil
+    assert_equal Encoding::US_ASCII, Time.now.to_s.encoding
+  ensure
+    Encoding.default_internal = before
+  end
+
+  def test_to_s_transcoding
+    before = Encoding.default_internal
+    Encoding.default_internal = Encoding::UTF_8
+    assert_equal Encoding::UTF_8, Time.now.to_s.encoding
+  ensure
+    Encoding.default_internal = before
+  end
+
   def test_new
     assert_equal(Time.utc(2000,2,10), Time.new(2000,2,10, 11,0,0, 3600*11))
     assert_equal(Time.utc(2000,2,10), Time.new(2000,2,9, 13,0,0, -3600*11))
